apps/authentik/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: authentik-outpost
    annotations:
      nginx.ingress.kubernetes.io/enable-global-auth: "false"
spec:
    rules:
        - host: authentik.pub.${CLUSTER_DOMAIN}
          http:
              paths: 
              - path: /outpost.goauthentik.io
                pathType: ImplementationSpecific
                backend:
                    # Or, to use an external Outpost, create an ExternalName service and reference that here.
                    # See https://kubernetes.io/docs/concepts/services-networking/service/#externalname
                    service:
                        name: ak-outpost-ingress
                        port:
                            number: 9000

    tls:
    - hosts:
      - authentik.pub.${CLUSTER_DOMAIN}
